Bug 1130784 - FAT32 file create limit code is using a bad error number. r=honzab, a=sledru